# sig8

./: .gitignore  CMakeLists.txt
bundler/: CMakeLists.txt  main.c
cmake/: sig8bundle.cmake  sig8util.cmake
doc/: music_bytecode.txt  resources.txt  sig8tk_file_format.txt
examples/: CMakeLists.txt
examples/hello/: CMakeLists.txt  main.c
examples/lines/: CMakeLists.txt  main.c
examples/sound/: CMakeLists.txt  main.c
examples/sprites/: CMakeLists.txt  main.c
examples/tiles/: CMakeLists.txt  main.c
include/: sig8.h
platform/emscripten/: shell_minimal.html
sig8tk/: CMakeLists.txt  history.c  main.c  resource.c  resource_selector.c  sig8tk.h  sig8tk_resources.c  sig8tk_resources.h  sprite_editor.c  sprites.c  ui.c
src/: CMakeLists.txt  alloc.c  audio.c  config.h  config.h.in  events.c  fs.c  glad.c  glad.h  graphics.c  input.c  layout.c  main.c  music.c  render.c  resource.c  sig8_internal.h  sound.c  tilemap.c  ui.c  util.c  window.c
src/editors/: editors.h  history.c  music_editor.c  sound_editor.c  sprite_editor.c  sprites.c  tile_editor.c  ui.c  util.c
src/resources/: font3x5.c  font5x7.c  font_aseprite.c  font_large.c  font_medium.c  font_small.c  font_tiny.c  icon.c
